--- a/Figure_2_theoretical_dynamics_DAE_vs_WDAE.ipynb
+++ b/Figure_2_theoretical_dynamics_DAE_vs_WDAE.ipynb
@@ -73,15 +73,15 @@
     "var = np.arange(0, 2, 0.2)\n",
     "alphas = (var-np.min(var))/(np.max(var)-np.min(var))\n",
     "lams = [2.5, 1, 0.5, 0.1]\n",
-    "fig, [(ax1, ax2, ax3), (ax4, ax5, ax6)] = plt.subplots(2, 3, figsize=(12, 4), sharex=True, sharey=True)\n",
+    "fig, [(ax1, ax2, ax3), (ax4, ax5, ax6)] = plt.subplots(2, 3, figsize=(12, 4), \n",
+    "                                                       sharex=True, sharey=True)\n",
     "row1 = [ax1, ax2, ax3]\n",
     "ax1.set_ylabel('$w(t, \\lambda)$')\n",
     "ax3.yaxis.set_label_position(\"right\")\n",
     "ax3.set_ylabel('Noise')\n",
     "for l, ax in zip(lams, row1):\n",
     "    for v, a in zip(var, alphas):\n",
-    "        lr = 0.005*(1/(2*l + 3*v))\n",
-    "        dyns = dae_learning_dynamics(l, v, 0, 1, 20000, 0.001) # replace with lr for optimal rates\n",
+    "        dyns = dae_learning_dynamics(l, v, 0, 1, 20000, 0.001) \n",
     "        noise_dyns.append(dyns)\n",
     "        ax.set_ylim(0, 1.1)     \n",
     "        ax.set_title('$\\lambda =$' + str(l))\n",
@@ -94,9 +94,9 @@
     "ax6.set_ylabel('Weight decay')\n",
     "for l, ax in zip(lams, row2):\n",
     "    reg = var*l/(var+l)\n",
-    "    lrs = 0.005*((l + var)/(2*l*(l + 2*var)))\n",
-    "    for r, lr in zip(reg, lrs):\n",
-    "        dyns = dae_learning_dynamics(l, 0, r, 1, 20000, 0.001) # replace with lr for optimal rates\n",
+    "\n",
+    "    for r in reg:\n",
+    "        dyns = dae_learning_dynamics(l, 0, r, 1, 20000, 0.001) \n",
     "        reg_dyns.append(dyns)\n",
     "        ax.set_ylim(0, 1.1)\n",
     "        ax.set_xlabel('t (epoch)')\n",
