Reduced length of code lines.

--- a/Figure_4_effects_DAE_vs_WDAE_on_weight_norm.ipynb
+++ b/Figure_4_effects_DAE_vs_WDAE_on_weight_norm.ipynb
@@ -37,7 +37,8 @@
     "from src.scalar_net.visualisations import plot_weight_norm\n",
     "from src.scalar_net.visualisations import plot_learning_dynamics\n",
     "from src.scalar_net.visualisations import plot_optimiser_trajectory_2d\n",
-    "from src.scalar_net.visualisations import plot_mse_loss_surface_2d, plot_global_minimum_manifold_2d\n",
+    "from src.scalar_net.visualisations import plot_mse_loss_surface_2d\n",
+    "from src.scalar_net.visualisations import plot_global_minimum_manifold_2d\n",
     "\n",
     "num_trials = 10\n",
     "histories = []\n",
