--- a/Figure_4_effects_DAE_vs_WDAE_on_weight_norm.ipynb
+++ b/Figure_4_effects_DAE_vs_WDAE_on_weight_norm.ipynb
@@ -84,7 +84,7 @@
     "        weights['w1'].append(w1)\n",
     "        weights['w2'].append(w2)\n",
     "            \n",
-    "        # plot optimiser trajectory (remove duplicate labels and add legend)\n",
+    "        # plot optimiser trajectory \n",
     "        plot_optimiser_trajectory_2d(ax_1, histories[t], c=col1, ls='--', label='GD path')\n",
     "        plot_weight_norm(ax_3, histories[t], c=col2)\n",
     "        plot_learning_dynamics(ax_2, histories[t], label='Simulation', c=col1, ls='--')\n",
