Added figure description.

--- a/Figure_5_mnist_cifar10_theory_vs_actual_dynamics.ipynb
+++ b/Figure_5_mnist_cifar10_theory_vs_actual_dynamics.ipynb
@@ -696,6 +696,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solid lines represent theoretical dynamics and `x' markers simulated dynamics. \n",
+    "\n",
+    "**Left**: Weight decay: AE (blue) vs. WDAE with $\\gamma = 0.5$ (orange). \n",
+    "\n",
+    "**Right**: Noise: AE (blue) vs. DAE with $\\sigma^2 = 0.5$ (green). \n",
+    "\n",
+    "**Top**: MNIST. \n",
+    "\n",
+    "**Bottom**: CIFAR-10."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
