Added long running time note to the notebook reproducing Figure 6.

--- a/Figure_6_nonlinear_dae_learning_dynamics.ipynb
+++ b/Figure_6_nonlinear_dae_learning_dynamics.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Learning dynamics for nonlinear autoencoder networks using ReLU activation.\n",
     "\n",
-    "This notebook provides the code to produce Figure 6 in the paper: \"Learning dynamics of linear denoising autoencoders\". (ICML 2018)"
+    "This notebook provides the code to produce Figure 6 in the paper: \"Learning dynamics of linear denoising autoencoders\". (ICML 2018)\n",
+    "\n",
+    "**NOTE:**\n",
+    "\n",
+    "The code provided below to rerun all the experiments may take some time to finish (and it is recommended to save the results to disk once completed). However, to just reproduce the plot in Figure 6 of the paper, the learning dynamics data is already available in the `data` folder and can simply be loaded in to create the plot."
    ]
   },
   {
