Made code neater, added init calculations and updated colour gradient to match paper.

--- a/Figure_5_mnist_cifar10_theory_vs_actual_dynamics.ipynb
+++ b/Figure_5_mnist_cifar10_theory_vs_actual_dynamics.ipynb
@@ -298,18 +298,22 @@
    "source": [
     "# compute MNIST dynamics\n",
     "x_train_mnist_np = x_train_mnist.cpu().numpy()\n",
-    "theoretical_dynamics_mnist = theoretical_learning_dynamics(x_train_mnist_np[:num_samples, :], \n",
-    "                                                        x_train_mnist_np[:num_samples, :], \n",
-    "                                                        n_epoch=epochs, lr=lr, \n",
-    "                                                        var=0, reg=0)\n",
-    "theoretical_dynamics_reg_mnist = theoretical_learning_dynamics(x_train_mnist_np[:num_samples, :], \n",
-    "                                                            x_train_mnist_np[:num_samples, :], \n",
-    "                                                            n_epoch=epochs, lr=lr, \n",
-    "                                                            var=0, reg=reg_param)\n",
-    "theoretical_dynamics_noise_mnist = theoretical_learning_dynamics(x_train_mnist_np[:num_samples, :], \n",
-    "                                                                x_train_mnist_np[:num_samples, :], \n",
-    "                                                                n_epoch=epochs, lr=lr, \n",
-    "                                                                var=var_param, reg=0)"
+    "w0 = mnist_models[0].init\n",
+    "theoretical_dynamics_mnist = theoretical_learning_dynamics(\n",
+    "                                x_train_mnist_np[:num_samples, :], \n",
+    "                                x_train_mnist_np[:num_samples, :], \n",
+    "                                n_epoch=epochs, lr=lr, \n",
+    "                                var=0, reg=0, u0=w0)\n",
+    "theoretical_dynamics_reg_mnist = theoretical_learning_dynamics(\n",
+    "                                x_train_mnist_np[:num_samples, :], \n",
+    "                                x_train_mnist_np[:num_samples, :], \n",
+    "                                n_epoch=epochs, lr=lr, \n",
+    "                                var=0, reg=reg_param, u0=w0)\n",
+    "theoretical_dynamics_noise_mnist = theoretical_learning_dynamics(\n",
+    "                                x_train_mnist_np[:num_samples, :], \n",
+    "                                x_train_mnist_np[:num_samples, :], \n",
+    "                                n_epoch=epochs, lr=lr, \n",
+    "                                var=var_param, reg=0, u0=w0)"
    ]
   },
   {
@@ -582,18 +586,22 @@
    "source": [
     "# compute CIFAR-10 dynamics\n",
     "x_train_cifar10_np = x_train_cifar10.cpu().numpy()\n",
-    "theoretical_dynamics_cifar10 = theoretical_learning_dynamics(x_train_cifar10_np[:num_samples, :], \n",
-    "                                                        x_train_cifar10_np[:num_samples, :], \n",
-    "                                                        n_epoch=epochs, lr=lr, var=0, \n",
-    "                                                        reg=0, u0 = 1.5e-6)\n",
-    "theoretical_dynamics_reg_cifar10 = theoretical_learning_dynamics(x_train_cifar10_np[:num_samples, :], \n",
-    "                                                            x_train_cifar10_np[:num_samples, :], \n",
-    "                                                            n_epoch=epochs, lr=lr, var=0, \n",
-    "                                                            reg=reg_param, u0 = 1.5e-6)\n",
-    "theoretical_dynamics_noise_cifar10 = theoretical_learning_dynamics(x_train_cifar10_np[:num_samples, :], \n",
-    "                                                            x_train_cifar10_np[:num_samples, :], \n",
-    "                                                            n_epoch=epochs, lr=lr, var=var_param, \n",
-    "                                                            reg=0, u0 = 1.5e-6) "
+    "w0 = cifar10_models[0].init\n",
+    "theoretical_dynamics_cifar10 = theoretical_learning_dynamics(\n",
+    "                                x_train_cifar10_np[:num_samples, :], \n",
+    "                                x_train_cifar10_np[:num_samples, :], \n",
+    "                                n_epoch=epochs, lr=lr, var=0, \n",
+    "                                reg=0, u0 = w0)\n",
+    "theoretical_dynamics_reg_cifar10 = theoretical_learning_dynamics(\n",
+    "                                x_train_cifar10_np[:num_samples, :], \n",
+    "                                x_train_cifar10_np[:num_samples, :], \n",
+    "                                n_epoch=epochs, lr=lr, var=0, \n",
+    "                                reg=reg_param, u0 = w0)\n",
+    "theoretical_dynamics_noise_cifar10 = theoretical_learning_dynamics(\n",
+    "                                x_train_cifar10_np[:num_samples, :], \n",
+    "                                x_train_cifar10_np[:num_samples, :], \n",
+    "                                n_epoch=epochs, lr=lr, var=var_param, \n",
+    "                                reg=0, u0 = w0) "
    ]
   },
   {
